<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="activity"
            type="team.standalone.feature.billing.BillingSubscriptionActivity" />


        <variable
            name="viewModel"
            type="team.standalone.feature.billing.BillingSubscriptionViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <TextView
            android:id="@+id/textView12"
            style="@style/FumiyaTextStyleBold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:gravity="center"
            android:includeFontPadding="false"
            android:lineSpacingMultiplier="1.2"
            android:paddingStart="40dp"
            android:paddingEnd="40dp"
            android:text="@string/billing_subscription_title_header"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_description"
            style="@style/FumiyaTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:includeFontPadding="false"
            android:text="@string/billing_subscription_message"
            android:textFontWeight="400"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView12" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_subscription_benefits"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@color/colorTransparent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_description">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="20dp"
                        android:contentDescription="@string/iv_check"
                        android:src="@drawable/ic_check" />

                    <TextView
                        style="@style/FumiyaTextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/billing_subscription_subscribe_benefits_one"
                        android:textFontWeight="400" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="20dp"
                        android:contentDescription="@string/iv_check"
                        android:src="@drawable/ic_check" />

                    <TextView
                        style="@style/FumiyaTextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/billing_subscription_subscribe_benefits_two"
                        android:textFontWeight="400" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="20dp"
                        android:contentDescription="@string/iv_check"
                        android:src="@drawable/ic_check" />

                    <TextView
                        style="@style/FumiyaTextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/billing_subscription_subscribe_benefits_three"
                        android:textFontWeight="400" />
                </LinearLayout>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tv_subscription_precaution"
            style="@style/FumiyaTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:foreground="?attr/selectableItemBackground"
            android:includeFontPadding="false"
            android:padding="5dp"
            android:text="@string/billing_subscription_precautions"
            android:textColor="@color/orange"
            android:textFontWeight="400"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cl_subscription_benefits" />

        <TextView
            android:id="@+id/tv_precaution_lists"
            style="@style/FumiyaTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:lineSpacingMultiplier="1.4"
            android:text="@string/billing_subscription_precautions_list"
            android:textFontWeight="400"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_subscription_precaution" />

        <Button
            android:id="@+id/btn_purchase"
            style="@style/ButtonStyle"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:fontFamily="@font/noto_sans_jp_regular"
            android:includeFontPadding="false"
            android:onClick="@{() -> activity.subscribeToApp()}"
            android:text="@string/billing_subscription_btn_description"
            android:textFontWeight="400"
            android:textSize="16sp"
            app:cornerRadius="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_precaution_lists"
            app:strokeColor="@color/white"
            app:strokeWidth="1dp" />

        <TextView
            android:id="@+id/tv_purchase_later"
            style="@style/FumiyaTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:clickable="true"
            android:foreground="?attr/selectableItemBackground"
            android:includeFontPadding="false"
            android:onClick="@{() -> activity.goToMain()}"
            android:padding="5dp"
            android:text="@string/billing_subscription_pay_later"
            android:textFontWeight="400"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_purchase"
            app:underlineText="@{true}" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>